fix sub input color on new post for dark mode

--- a/public/css/theme-dark-mode.css
+++ b/public/css/theme-dark-mode.css
@@ -98,7 +98,7 @@ main em {
 #text_content,
 #tags,
 #profile,
-#group,
+#castle,
 #name,
 #ruri {
     border-color: #777777;
